# premier-league-standings

./: Cargo.toml  README.adoc
src/: main.rs  table.rs
